--- a/DIGI405-Lab-4.3 - Annotation.ipynb
+++ b/DIGI405-Lab-4.3 - Annotation.ipynb
@@ -1,6 +1,6 @@
 {
   "cells": [
-   {
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "36Of2Zu88uOR"
@@ -20,10 +20,9 @@
         "* There are 45 tweets in the sample, and you will have the choice of three labels \"positive\", \"negative\", or \"neutral\".\n",
         "* For each tweet, you should also provide a score (0-100%) that indicates your confidence that the label is a good fit for the tweet.\n",
         "\n",
-        "1. Upload the CSV file of unlabelled tweets\n",
-        "2. Run the cells below to display the interface and begin annotating.\n",
+        "➡️ Run the cells below to load the datasset and display the interface. Then start annotating!\n",
         "\n",
-        "ℹ️ Do not discuss your annotations with others - after this exercise, we will collate the class annotations and measure agreement using the [Krippendorff's alpha metric](https://www.k-alpha.org/).\n"
+        "✳️ Do not discuss your annotations with others - after this exercise, we will collate the class annotations and measure agreement using the [Krippendorff's alpha metric](https://www.k-alpha.org/).\n"
       ]
     },
     {
@@ -52,7 +51,7 @@
         "id": "c7LIt7xlqH94"
       },
       "source": [
-        "### Important - enter your UC ID in the cell below 👇"
+        " ### Important - enter your UC ID in the cell below 👇"
       ]
     },
     {
@@ -83,7 +82,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv(\"sample_tweets_unlabelled.csv\")"
+        "df = pd.read_csv(\"/srv/source-data/sample_tweets_unlabelled.csv\")"
       ]
     },
     {
@@ -508,13 +507,13 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.12 (ipykernel)",
+      "display_name": ".venv",
       "language": "python",
-      "name": "python3.12"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -526,7 +525,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.9"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
