--- a/DIGI405-Lab-4.3 - Annotation.ipynb
+++ b/DIGI405-Lab-4.3 - Annotation.ipynb
@@ -18,7 +18,7 @@
         "Use this notebook to annotate an unlabelled sample of tweets from the [Cardiff NLP tweet_eval dataset](https://huggingface.co/datasets/cardiffnlp/tweet_eval) [(Barbieri et al., 2020)](https://paperswithcode.com/paper/tweeteval-unified-benchmark-and-comparative).\n",
         "\n",
         "* There are 45 tweets in the sample, and you will have the choice of three labels \"positive\", \"negative\", or \"neutral\".\n",
-        "* For each tweet, you should also provide a score (0-100%) that indicates your confidence that the label is a good fit for the tweet.\n",
+        "* For each tweet, you must also provide a score (0-100%) that indicates your confidence that the label is a good fit for the tweet.\n",
         "\n",
         "➡️ Run the cells below to load the datasset and display the interface. Then start annotating!\n",
         "\n",
