--- a/DIGI405-Lab-4.3 - Annotation.ipynb
+++ b/DIGI405-Lab-4.3 - Annotation.ipynb
@@ -20,7 +20,7 @@
         "* There are 45 tweets in the sample, and you will have the choice of three labels \"positive\", \"negative\", or \"neutral\".\n",
         "* For each tweet, you must also provide a score (0-100%) that indicates your confidence that the label is a good fit for the tweet.\n",
         "\n",
-        "➡️ Run all of the cells below to load the datasset and display the interface. Then start annotating!\n",
+        "➡️ Run all of the cells below to load the dataset and display the interface. Then start annotating!\n",
         "\n",
         "✳️ Do not discuss your annotations with others - after this exercise, we will collate the class annotations and measure agreement using the [Krippendorff's alpha metric](https://www.k-alpha.org/).\n"
       ]
