--- a/DIGI405-Lab-4.3 - Annotation.ipynb
+++ b/DIGI405-Lab-4.3 - Annotation.ipynb
@@ -22,7 +22,7 @@
         "\n",
         "➡️ Run all of the cells below to load the dataset and display the interface. Then start annotating!\n",
         "\n",
-        "✳️ Do not discuss your annotations with others - after this exercise, we will collate the class annotations and measure agreement using the [Krippendorff's alpha metric](https://www.k-alpha.org/).\n"
+        "✳️ Do not discuss your annotations with others. After this exercise, your tutor will collate the class annotations and measure agreement using the [Krippendorff's alpha metric](https://www.k-alpha.org/).\n"
       ]
     },
     {
