--- a/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
+++ b/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
@@ -21,11 +21,11 @@
         "\n",
         "You don't need to change any code apart from adding the zip file path.\n",
         "\n",
-        "1. Upload a zip file of the labelled CSV files from the class\n",
+        "1. Upload this notebook to JupyterHub along with the zip file of labelled CSV files from the class\n",
         "2. Enter the path to the zip as the `zip_file_path` variable\n",
         "3. Run the cells - do a visual check of output to make sure it is as expected\n",
         "4. Share the `=== CONFIDENCE ANALYSIS PER TEXT ===` results with the class\n",
-        "5. Share the `Krippendorff's alpha:` score with the class and the `encoded_values.csv` which is in a format that students can upload directly to the online K-Alpha calcuator (test this first - the result using the 'Nominal' data type option should be the same as calculated here.\n",
+        "5. Share the `Krippendorff's alpha:` score with the class and the `encoded_values.csv` which is in a format that students can upload directly to the online K-Alpha calculator (test this first - the result using the 'Nominal' data type option should be the same as calculated here.\n",
         "\n"
       ]
     },
@@ -396,10 +396,14 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3.12 (ipykernel)",
+      "display_name": ".venv",
       "language": "python",
-      "name": "python3.12"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -411,11 +415,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.9"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
