Update printed outputs

--- a/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
+++ b/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
@@ -329,10 +329,10 @@
         "    if verbose:\n",
         "        print(f\"Total pairable values: {total_values}\")\n",
         "        print(f\"Total pairs compared: {total_pairs}\")\n",
-        "        print(f\"Total coincidences (n): {total_coincidences}\")\n",
-        "        print(f\"Value counts (n.c): {value_counts}\")\n",
-        "        print(f\"Observed disagreement (Do): {Do}\")\n",
-        "        print(f\"Expected disagreement (De): {De}\")\n",
+        "        # print(f\"Total coincidences (n): {total_coincidences}\")\n",
+        "        # print(f\"Value counts (n.c): {value_counts}\")\n",
+        "        # print(f\"Observed disagreement (Do): {Do}\")\n",
+        "        # print(f\"Expected disagreement (De): {De}\")\n",
         "        print(f\"Krippendorff's alpha: {alpha:.3f}\")\n",
         "\n",
         "    return alpha"
