Update to retain original row order

--- a/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
+++ b/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
@@ -90,6 +90,9 @@
         "        with zip_ref.open(first_file) as f:\n",
         "            result_df = pd.read_csv(io.TextIOWrapper(f, encoding = \"utf-8\"))\n",
         "\n",
+        "        # Store original text order\n",
+        "        original_text_order = result_df[\"text\"].tolist()\n",
+        "\n",
         "        # Rename columns in first dataframe\n",
         "        result_df = result_df.rename(columns = {\n",
         "            \"label\": f\"label_{first_suffix}\",\n",
@@ -123,6 +126,14 @@
         "\n",
         "                # Merge with result dataframe\n",
         "                result_df = pd.merge(result_df, temp_df, on = \"text\", how = \"outer\")\n",
+        "\n",
+        "        # Restore original row order (for texts present in the first file)\n",
+        "        result_df[\"_original_order\"] = result_df[\"text\"].apply(\n",
+        "            lambda x: original_text_order.index(x) if x in original_text_order else len(original_text_order)\n",
+        "        )\n",
+        "\n",
+        "        # Sort by original order, then put new texts (not in first file) at the end\n",
+        "        result_df = result_df.sort_values(\"_original_order\").drop(columns=[\"_original_order\"])\n",
         "\n",
         "        result_df = result_df.reset_index(drop=True)\n",
         "\n",
