Improved metrics, added confidence box plot and agreement with original labels

--- a/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
+++ b/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
@@ -17,15 +17,15 @@
         "id": "3bb94781-628e-473f-928c-23b8296c14a6"
       },
       "source": [
-        "This notebook can be used to collate the class annotations, measure agreement with Krippendorff's Alpha, and find the texts with the lowest and highest average confidence, and the greatest confidence range.\n",
+        "This notebook can be used by the class facilitator or tutor to collate the class annotations, measure agreement with Krippendorff's Alpha, and find the texts with the lowest and highest average confidence, and the greatest confidence range.\n",
         "\n",
         "You don't need to change any code apart from adding the zip file path.\n",
         "\n",
         "1. Upload this notebook to JupyterHub along with the zip file of labelled CSV files from the class\n",
         "2. Enter the path to the zip as the `zip_file_path` variable\n",
         "3. Run the cells - do a visual check of output to make sure it is as expected\n",
-        "4. Share the `=== CONFIDENCE ANALYSIS PER TEXT ===` results with the class\n",
-        "5. Share the `Krippendorff's alpha:` score with the class and the `encoded_values.csv` which is in a format that students can upload directly to the online K-Alpha calculator (test this first - the result using the 'Nominal' data type option should be the same as calculated here.\n",
+        "4. Share the `=== CONFIDENCE ANALYSIS PER TEXT ===` results and the box plot with the class\n",
+        "5. Share the `Krippendorff's alpha:` score with the class and the `encoded_annotations.csv` which is in a format that students can upload directly to the online K-Alpha calculator (test this first - the result using the 'Nominal' data type option should be the same as calculated here.\n",
         "\n"
       ]
     },
@@ -43,6 +43,8 @@
         "import zipfile\n",
         "import re\n",
         "import io\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
         "from typing import Union"
       ]
     },
@@ -55,7 +57,8 @@
       },
       "outputs": [],
       "source": [
-        "zip_file_path = \"df_labelled_test.zip\""
+        "# zip_file_path = \"df_labelled_test.zip\"\n",
+        "zip_file_path = \"C:/Users/stahe/Documents/GitHub/annotation-lab/DIGI405-25S2-Annotated tweets submission-4358797.zip\""
       ]
     },
     {
@@ -71,20 +74,20 @@
         "    \"\"\"\n",
         "    Given multiple CSV files in a zip archive, concatenate into a single dataframe.\n",
         "\n",
-        "    This function processes CSV files matching the pattern \"df_labelled_*.csv\" from\n",
+        "    This function processes CSV files containing the pattern \"*df_labelled_*.csv\" from\n",
         "    a zip archive. It merges them horizontally based on the \"text\" column, renames\n",
         "    the \"label\" and \"confidence\" columns with suffixes based on the filename, and\n",
         "    adds encoded columns that convert text labels to integers.\n",
         "    \"\"\"\n",
         "    with zipfile.ZipFile(zip_file_path, \"r\") as zip_ref:\n",
-        "        csv_files = [f for f in zip_ref.namelist() if f.startswith(\"df_labelled_\") and f.endswith(\".csv\")]\n",
+        "        csv_files = [f for f in zip_ref.namelist() if \"df_labelled_\" in f and f.endswith(\".csv\")]\n",
         "\n",
         "        if not csv_files:\n",
         "            print(\"No matching CSV files found in the zip archive.\")\n",
         "            return None\n",
         "\n",
         "        first_file = csv_files[0]\n",
-        "        match = re.search(r\"df_labelled_(.+)\\.csv\", first_file)\n",
+        "        match = re.search(r\"df_labelled_([^\\.]+)\\.csv\", first_file)\n",
         "        first_suffix = match.group(1) if match else \"unknown\"\n",
         "\n",
         "        with zip_ref.open(first_file) as f:\n",
@@ -108,7 +111,7 @@
         "        # Process remaining CSV files\n",
         "        for file in csv_files[1:]:\n",
         "            # Extract suffix from filename\n",
-        "            match = re.search(r\"df_labelled_(.+)\\.csv\", file)\n",
+        "            match = re.search(r\"df_labelled_([^\\.]+)\\.csv\", file)\n",
         "            if match:\n",
         "                suffix = match.group(1)\n",
         "\n",
@@ -116,10 +119,12 @@
         "                    df = pd.read_csv(io.TextIOWrapper(f, encoding = \"utf-8\"))\n",
         "\n",
         "                # Create temporary df with renamed columns\n",
-        "                temp_df = df[[\"text\", \"label\", \"confidence\"]].rename(columns={\n",
-        "                    \"label\": f\"label_{suffix}\",\n",
-        "                    \"confidence\": f\"confidence_{suffix}\"\n",
-        "                })\n",
+        "                temp_df = df[[\"text\",\n",
+        "                              \"label\",\n",
+        "                              \"confidence\"]].rename(columns={\n",
+        "                                  \"label\": f\"label_{suffix}\",\n",
+        "                                  \"confidence\": f\"confidence_{suffix}\"\n",
+        "                                  })\n",
         "\n",
         "                # Create encoded column\n",
         "                temp_df[f\"encoded_{suffix}\"] = temp_df[f\"label_{suffix}\"].map(label_mapping)\n",
@@ -136,6 +141,19 @@
         "        result_df = result_df.sort_values(\"_original_order\").drop(columns=[\"_original_order\"])\n",
         "\n",
         "        result_df = result_df.reset_index(drop=True)\n",
+        "\n",
+        "        confidence_cols = [col for col in result_df.columns if \"confidence_\" in col]\n",
+        "\n",
+        "        for col in confidence_cols:\n",
+        "            result_df[col] = (\n",
+        "            result_df[col]\n",
+        "            .astype(str)\n",
+        "            .str.rstrip(\"%\")\n",
+        "            .replace(\"nan\", pd.NA)\n",
+        "            .astype(\"Int64\")  # Capital I, allows NA\n",
+        "            )\n",
+        "\n",
+        "        result_df[\"tweet_id\"] = [f\"Tweet {i+1}\" for i in range(len( result_df))]\n",
         "\n",
         "        return result_df"
       ]
@@ -174,70 +192,48 @@
       },
       "outputs": [],
       "source": [
-        "def analyse_confidence_per_text(merged_df):\n",
+        "def analyse_confidence_per_text(df):\n",
         "    \"\"\"\n",
-        "    Get the average, min, max, and range of\n",
+        "    Get the average, min, max, and interquartile range of\n",
         "    confidence per text.\n",
-        "\n",
-        "    Print results and return as a dict.\n",
         "    \"\"\"\n",
-        "    df = merged_df.copy()\n",
         "    confidence_cols = [col for col in df.columns if \"confidence_\" in col]\n",
         "\n",
-        "    if not confidence_cols:\n",
-        "        print(\"No confidence columns found in the dataframe\")\n",
-        "        return None\n",
-        "\n",
-        "    for col in confidence_cols:\n",
-        "        if df[col].dtype.kind not in \"iuf\":  # if not integer, unsigned int, or float\n",
-        "            df[col] = df[col].astype(str).str.rstrip(\"%\").astype(int)\n",
-        "\n",
-        "    # Calculate statistics per text\n",
-        "    df[\"avg_confidence\"] = df[confidence_cols].mean(axis = 1)\n",
-        "    df[\"min_confidence\"] = df[confidence_cols].min(axis = 1)\n",
-        "    df[\"max_confidence\"] = df[confidence_cols].max(axis = 1)\n",
+        "    df[\"avg_confidence\"] = df[confidence_cols].mean(axis=1)\n",
+        "    df[\"min_confidence\"] = df[confidence_cols].min(axis=1)\n",
+        "    df[\"max_confidence\"] = df[confidence_cols].max(axis=1)\n",
+        "    df[\"q1_confidence\"] = df[confidence_cols].quantile(0.25, axis=1)\n",
+        "    df[\"q3_confidence\"] = df[confidence_cols].quantile(0.75, axis=1)\n",
+        "    df[\"iqr_confidence\"] = df[\"q3_confidence\"] - df[\"q1_confidence\"]\n",
         "    df[\"range_confidence\"] = df[\"max_confidence\"] - df[\"min_confidence\"]\n",
         "\n",
-        "    highest_avg_idx = df[\"avg_confidence\"].idxmax()\n",
-        "    lowest_avg_idx = df[\"avg_confidence\"].idxmin()\n",
-        "    highest_range_idx = df[\"range_confidence\"].idxmax()\n",
+        "    # Find the maximum/minimum values\n",
+        "    highest_avg = df[\"avg_confidence\"].max()\n",
+        "    lowest_avg = df[\"avg_confidence\"].min()\n",
+        "    highest_iqr = df[\"iqr_confidence\"].max()\n",
         "\n",
-        "    # Create result dictionary\n",
-        "    results = {\n",
-        "        \"highest_avg_confidence\": {\n",
-        "            \"text\": df.loc[highest_avg_idx, \"text\"],\n",
-        "            \"average\": df.loc[highest_avg_idx, \"avg_confidence\"],\n",
-        "        },\n",
-        "        \"lowest_avg_confidence\": {\n",
-        "            \"text\": df.loc[lowest_avg_idx, \"text\"],\n",
-        "            \"average\": df.loc[lowest_avg_idx, \"avg_confidence\"],\n",
-        "        },\n",
-        "        \"highest_range\": {\n",
-        "            \"text\": df.loc[highest_range_idx, \"text\"],\n",
-        "            \"range\": df.loc[highest_range_idx, \"range_confidence\"],\n",
-        "            \"min\": df.loc[highest_range_idx, \"min_confidence\"],\n",
-        "            \"max\": df.loc[highest_range_idx, \"max_confidence\"],\n",
-        "        }\n",
-        "    }\n",
+        "    # Find all tweets with these values\n",
+        "    highest_avg_tweets = df[df[\"avg_confidence\"] == highest_avg]\n",
+        "    lowest_avg_tweets = df[df[\"avg_confidence\"] == lowest_avg]\n",
+        "    highest_iqr_tweets = df[df[\"iqr_confidence\"] == highest_iqr]\n",
         "\n",
-        "    # Print results in a readable format\n",
+        "    # Print results including all ties\n",
         "    print(\"\\n=== CONFIDENCE ANALYSIS PER TEXT ===\\n\")\n",
         "\n",
-        "    print(\"TEXT WITH HIGHEST AVERAGE CONFIDENCE:\")\n",
-        "    print(f\"Text: \\'{results[\"highest_avg_confidence\"][\"text\"]}\\'\")\n",
-        "    print(f\"Average confidence: {results[\"highest_avg_confidence\"][\"average\"]:.2f}\")\n",
+        "    print(f\"TEXT(S) WITH HIGHEST AVERAGE CONFIDENCE ({highest_avg:.2f}):\")\n",
+        "    for _, row in highest_avg_tweets.iterrows():\n",
+        "        print(f\"{row['tweet_id']}: '{row['text']}'\")\n",
         "    print()\n",
         "\n",
-        "    print(\"TEXT WITH LOWEST AVERAGE CONFIDENCE:\")\n",
-        "    print(f\"Text: \\'{results[\"lowest_avg_confidence\"][\"text\"]}\\'\")\n",
-        "    print(f\"Average confidence: {results[\"lowest_avg_confidence\"][\"average\"]:.2f}\")\n",
+        "    print(f\"TEXT(S) WITH LOWEST AVERAGE CONFIDENCE ({lowest_avg:.2f}):\")\n",
+        "    for _, row in lowest_avg_tweets.iterrows():\n",
+        "        print(f\"{row['tweet_id']}: '{row['text']}'\")\n",
         "    print()\n",
         "\n",
-        "    print(\"TEXT WITH BIGGEST CONFIDENCE RANGE:\")\n",
-        "    print(f\"Text: \\'{results[\"highest_range\"][\"text\"]}\\'\")\n",
-        "    print(f\"Range: {results[\"highest_range\"][\"range\"]} (from {results[\"highest_range\"][\"min\"]} to {results[\"highest_range\"][\"max\"]})\")\n",
-        "\n",
-        "    return results"
+        "    print(f\"TEXT(S) WITH BIGGEST CONFIDENCE INTERQUARTILE RANGE (IQR = {highest_iqr:.2f}):\")\n",
+        "    for _, row in highest_iqr_tweets.iterrows():\n",
+        "        print(f\"{row['tweet_id']}: '{row['text']}'\")\n",
+        "        print(f\"  Q1: {row['q1_confidence']:.2f}, Q3: {row['q3_confidence']:.2f}, Range: {row['range_confidence']:.2f}\")\n"
       ]
     },
     {
@@ -249,7 +245,62 @@
       },
       "outputs": [],
       "source": [
-        "results = analyse_confidence_per_text(merged_df)"
+        "analyse_confidence_per_text(merged_df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9f320e4a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def plot_confidence_boxplots(merged_df):\n",
+        "    \"\"\"\n",
+        "    Create boxplots of confidence scores for each tweet.\n",
+        "    \"\"\"\n",
+        "    confidence_cols = [col for col in merged_df.columns if \"confidence_\" in col]\n",
+        "\n",
+        "    df = merged_df.copy()\n",
+        "    df_long = pd.melt(\n",
+        "        df,\n",
+        "        id_vars=[\"tweet_id\"],\n",
+        "        value_vars = confidence_cols,\n",
+        "        var_name = \"Annotator\",\n",
+        "        value_name = \"Confidence\"\n",
+        "    )\n",
+        "\n",
+        "    df_long[\"Annotator\"] = df_long[\"Annotator\"].str.replace(\"confidence_\", \"\")\n",
+        "\n",
+        "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "\n",
+        "    sns.boxplot(\n",
+        "        data = df_long,\n",
+        "        x = \"tweet_id\",\n",
+        "        y = \"Confidence\",\n",
+        "        ax = ax,\n",
+        "        color = \"royalblue\"\n",
+        "    )\n",
+        "\n",
+        "    plt.title(\"Confidence Scores: Distribution by Tweet\", fontsize = 10)\n",
+        "    plt.ylabel(\"Confidence Score\", fontsize = 9)\n",
+        "    plt.xlabel(\"Tweet Number\", fontsize = 9)\n",
+        "    plt.xticks(rotation = 90, ha = \"center\", fontsize = 9)\n",
+        "    plt.yticks(fontsize = 9)\n",
+        "    plt.tight_layout()\n",
+        "\n",
+        "    return fig"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "78f6e4d7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig = plot_confidence_boxplots(merged_df)\n",
+        "plt.show()"
       ]
     },
     {
@@ -279,8 +330,9 @@
         "    \"\"\"\n",
         "    # Convert to numpy array with NaN for missing values\n",
         "    if isinstance(data, pd.DataFrame):\n",
-        "        data = data.values\n",
-        "    data = np.where(data == 'NA', np.nan, data).astype(float)\n",
+        "        data = data.to_numpy(dtype=\"float64\", na_value=np.nan)\n",
+        "    else:\n",
+        "        data = np.array(data, dtype=\"float64\")\n",
         "\n",
         "    # Initialise coincidence matrix as dictionary\n",
         "    coincidences = {}\n",
@@ -358,11 +410,19 @@
       },
       "outputs": [],
       "source": [
-        "# Extract just the encoded columns from the merged dataframe\n",
+        "confidence_cols = [col for col in merged_df.columns if \"confidence_\" in col]\n",
         "encoded_cols = [col for col in merged_df.columns if \"encoded_\" in col]\n",
-        "encoded_df = merged_df[encoded_cols]\n",
+        "encoded_df = merged_df[encoded_cols].copy()\n",
         "\n",
-        "encoded_df = encoded_df.fillna(\"NA\")\n",
+        "# For each annotator, check their confidence scores\n",
+        "# Replace encoded values with NA where confidence is 0\n",
+        "for i, (enc_col, conf_col) in enumerate(zip(encoded_cols, confidence_cols)):\n",
+        "    zero_confidence_mask = merged_df[conf_col] == 0\n",
+        "    if zero_confidence_mask.any():\n",
+        "        print(f\"Found {zero_confidence_mask.sum()} zero confidence scores for {enc_col}\")\n",
+        "        encoded_df.loc[zero_confidence_mask, enc_col] = pd.NA  # Use pd.NA, not np.nan\n",
+        "    # Ensure column is Int64 after assignment\n",
+        "    encoded_df[enc_col] = encoded_df[enc_col].astype(\"Int64\")\n",
         "\n",
         "print(f\"Calculating Krippendorff's alpha for {len(encoded_cols)} encoded columns\")\n",
         "print(f\"Number of texts analysed: {len(encoded_df)}\")\n",
@@ -379,7 +439,7 @@
       },
       "outputs": [],
       "source": [
-        "# encoded_df"
+        "encoded_df.head(5)"
       ]
     },
     {
@@ -391,8 +451,8 @@
       },
       "outputs": [],
       "source": [
-        "encoded_df.to_csv(\"encoded_values.csv\", header=False, index=False)\n",
-        "print(\"Saved encoded values to encoded_values.csv (no headers, no index)\\nDownload this file and share with the class for testing with online K-Alpha calculator\\nPlease test first!\")"
+        "encoded_df.to_csv(\"encoded_annotations.csv\", header=False, index=False, na_rep=\"NA\")\n",
+        "print(\"Saved encoded values to encoded_annotations.csv (no headers, no index)\\nDownload this file and share with the class for testing with online K-Alpha calculator\\nPlease test first!\")"
       ]
     },
     {
@@ -403,7 +463,58 @@
         "id": "65db0f11-796c-4222-bba2-98f7c7fac862"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Now get a single annotation per tweet for the class based on the mode for each tweet\n",
+        "row_modes = encoded_df.mode(axis=1, dropna=True)[0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "25ce65c8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "orig_labels = pd.read_csv(\"/srv/source-data/tweets_original_labels.csv\", header = 0)\n",
+        "row_modes_df = row_modes.to_frame().reset_index(drop=True)\n",
+        "\n",
+        "# Concatenate horizontally\n",
+        "combined_class_orig = pd.concat([row_modes_df, orig_labels], axis=1)\n",
+        "combined_class_orig = combined_class_orig.rename(columns={0: \"class_label\", \"label\": \"orig_label\"})\n",
+        "\n",
+        "combined_class_orig_enc = combined_class_orig.drop(columns=[\"text\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5b0a2331",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "alpha_2 = calculate_krippendorff_alpha(combined_class_orig_enc, verbose=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ffa4dcbe",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "combined_class_orig"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7875c50e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Save without header or index\n",
+        "combined_class_orig_enc.to_csv(\"row_modes_and_orig_labels.csv\", header=False, index=False)"
+      ]
     }
   ],
   "metadata": {
