Updated file path

--- a/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
+++ b/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
@@ -57,8 +57,7 @@
       },
       "outputs": [],
       "source": [
-        "# zip_file_path = \"df_labelled_test.zip\"\n",
-        "zip_file_path = \"C:/Users/stahe/Documents/GitHub/annotation-lab/DIGI405-25S2-Annotated tweets submission-4358797.zip\""
+        "zip_file_path = \"df_labelled_test.zip\""
       ]
     },
     {
