--- a/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
+++ b/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
@@ -474,6 +474,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Compare the class mode label to the original dataset label\n",
         "orig_labels = pd.read_csv(\"/srv/source-data/tweets_original_labels.csv\", header = 0)\n",
         "row_modes_df = row_modes.to_frame().reset_index(drop=True)\n",
         "\n",
