Update box plot code

--- a/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
+++ b/DIGI405-Lab-4.3 Facilitator-k-alpha.ipynb
@@ -283,7 +283,7 @@
         "\n",
         "    plt.title(\"Confidence Scores: Distribution by Tweet\", fontsize = 10)\n",
         "    plt.ylabel(\"Confidence Score\", fontsize = 9)\n",
-        "    plt.xlabel(\"Tweet Number\", fontsize = 9)\n",
+        "    # plt.xlabel(\"Tweet Number\", fontsize = 9)\n",
         "    plt.xticks(rotation = 90, ha = \"center\", fontsize = 9)\n",
         "    plt.yticks(fontsize = 9)\n",
         "    plt.tight_layout()\n",
